fix header background on mobile

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -4,6 +4,7 @@
   background-position: right;
 
   @include onTablet {
+    background-image: url(../images/backgrounds/header-bg-tablet.jpg);
     background-position: center;
   }
 
